--- a/resource/folio/profile/profile.css
+++ b/resource/folio/profile/profile.css
@@ -33,6 +33,8 @@
     overflow-x: hidden;
     overflow-y: scroll;
     height: calc(100% - 65px);
+    scrollbar-width: thin;
+    scrollbar-color: rgb(50, 202, 141) aliceblue;
 }
 
 .content{
